--- a/journal/201811.md
+++ b/journal/201811.md
@@ -75,6 +75,8 @@ Warm welcome to new people contributing for the first time:
 * [logicminds](https://github.com/decred/dcrd/commits?author=logicminds) (dcrd, _missed in Oct issue_)
 * [itswisdomagain](https://github.com/decred/dcrdata/commits?author=itswisdomagain) (dcrdata)
 * [wallclockbuilder](https://github.com/decred/politeiagui/commits?author=wallclockbuilder) (politeiagui) {CONFIRM}
+* @30000fps (design) {clarify}
+
 
 {new contractor companies, updates from existing ones}
 
@@ -90,13 +92,15 @@ Part of November was reported in the previous issue due to late release.
 
 @snr01 provided nice charts. People in #proposals and #research hacked on Politeia data.
 
+Low quality proposals cluttering Politeia were disussed in depth and multiple ideas were suggested. @richardred gave a nice overview of this in Politeia Digest #4.
+
 ## Network
 
 Hashrate: {start, end, low, high, variation; pool distribution}
 
 Staking: {30-day average tix price, low, high, locked DCR million and % of avail supply}
 
-After the price dropped to 97.1, 1,378 tickets were purchased in a single window that bumped the price to 109.8. This is the new all time high on new sdiff algorithm that is in effect since Jul 2017.
+After the price dropped to 97.1, 1,378 tickets were purchased in a single window that bumped the price to 110.2 after 9 subsequent price increases. This is the new all time high on new sdiff algorithm that is in effect since Jul 2017.
 
 Nodes: {node counts, version distribution}
 
@@ -105,6 +109,11 @@ Nodes: {node counts, version distribution}
 ## Mining
 
 The Whatsminer D1 [turned out](https://twitter.com/Pangolinminer/status/1061521332498624512) to be 48 TH/s, 9% up from expected 44 TH/s. The price is $4,850 [from Pangolin](https://pangolinminer.com/product/whatsminer-dcr-with-psu-shipout-on-dec-5/).
+
+D1 price bump
+
+* https://www.reddit.com/r/decred/comments/9fdz9d/psa_do_not_purchase_the_whatsminer_44th_decred/e9mcfnf/
+* https://bitcointalk.org/index.php?topic=2345436.msg47855662#msg47855662
 
 ## Integrations
 
@@ -198,6 +207,10 @@ Comm systems news:
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
+Twitter:
+
+* a poll whether open Politeia voting is a good process, more of the beloved plutocracy thing https://twitter.com/KyleSamani/status/1062382292860059648
+
 Reddit: {interesting threads}
 
 Chats: {interesting convos}
@@ -206,11 +219,15 @@ Chats: {interesting convos}
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
+Oct 14-15 BTC drop, most top 100 cryptoassets lost 10-20%.
+
 ## Relevant External
 
 {PoW, ASIC resistance, tech}
 
 {BCH Rust impl https://news.bitcoin.com/bitcoin-cash-community-introduced-to-new-bch-library-written-in-rust/}
+
+Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blossom-and-proposed-feature-goals/31891) hybrid ASIC-GPU mining, among other improvements planned for next year's protocol upgrade.
 
 {governance, forks
 
