Oct18: add medium link

--- a/journal/201810.md
+++ b/journal/201810.md
@@ -2,6 +2,8 @@
 
 ![Politeia mainnet release](../img/politeia-300.jpg "Politeia mainnet release")
 
+_Also available [on Medium](https://medium.com/decred/decred-journal-october-2018-6a875424f796)_
+
 The big news of the month is the Politeia mainnet launch on October 16th, when decision-making power over the future direction of the project and Treasury funds was handed over to the stakeholder community. Congratulations to everyone and thanks to the Politeia team for the countless hours of work.
 
 In a [blog post](https://blog.decred.org/2018/10/15/Politeia-in-Production/) to mark the occasion, @jy-p shared some insights from his experiences as a custodian of the [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx). He expressed optimism and interest in seeing what the Decred community would do with this power, but also cautioned about some pitfalls to be avoided and ways in which this grand governance experiment could go wrong.
@@ -340,7 +342,7 @@ Please let us know in the [comments](https://www.reddit.com/r/decred/comments/9v
 
 ## About This Issue
 
-This is the 7th issue of Decred Journal. It is available on [GitHub](https://xaur.github.io/decred-news/journal/201810). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 7th issue of Decred Journal. It is available on [GitHub](https://xaur.github.io/decred-news/journal/201810) and [Medium](https://medium.com/decred/decred-journal-october-2018-6a875424f796). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
