--- a/journal/201811.md
+++ b/journal/201811.md
@@ -167,6 +167,7 @@ Featured articles:
 
 * {1105} https://www.coinbureau.com/interview/marco-peereboom-decred/
 * {1109} https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
+* {1115} https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e
 
 Articles:
 
@@ -219,13 +220,17 @@ Chats: {interesting convos}
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
-Oct 14-15 BTC drop, most top 100 cryptoassets lost 10-20%.
+Oct 14-15 BTC drop, most top 100 cryptoassets lost 10-20% together with the BTC dive to 5400 USDT / 5200 USD. This happened just a day before the BCH split.
 
 ## Relevant External
 
 {PoW, ASIC resistance, tech}
 
 {BCH Rust impl https://news.bitcoin.com/bitcoin-cash-community-introduced-to-new-bch-library-written-in-rust/}
+
+According to [this thread](https://www.reddit.com/r/CryptoCurrency/comments/9sq0jj/shady_behavior_from_groestlcoin_grs_developers/), yet another coin with claimed ASIC resistance received an ASIC while the developers removed ASIC resistance claims from the website. Reddit thread that questioned this was [wiped out](https://archive.today/SzoHs). An instance where transparent censorship is missing. (_missed in Oct issue_)
+
+A paper was [published](https://www.nature.com/articles/s41558-018-0321-8) in Nature Climate journal that suggests Bitcoin PoW mining will have significant negative impact on climate change. [Discussion](https://matrix.to/#/!NKtIRqGOEGaZvSQkKl:decred.org/$15412120277994HzToF:decred.org) in #random noted serious misunderstandings of how PoW works and alarmingly low quality of the paper, along with some guesses who and why could post it.
 
 Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blossom-and-proposed-feature-goals/31891) hybrid ASIC-GPU mining, among other improvements planned for next year's protocol upgrade.
 
@@ -238,8 +243,12 @@ Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blos
 * what has Cobra to do with it?
 * https://www.forbes.com/sites/billybambrough/2018/11/05/looming-fork-pushed-bitcoin-cash-up-almost-40-over-the-weekend-heres-why/
 * https://news.bitcoin.com/discussions-intensify-as-bch-fork-approaches/
+* nice overview https://medium.com/circle-research/bitcoin-cash-hard-fork-report-4e4377d514a
+  * both projects get individually weaker
+  * SV is quite aggressive to ABC and hopes to dedicate some hashrate to mining empty blocks on the ABC chain (and not to secure the SV chain)
 * Poloniex [allowed](https://poloniex.freshdesk.com/support/solutions/articles/1000270700-update-on-the-upcoming-bitcoin-cash-hard-fork) users to trade betwen both possible outcomes of the Bitcoin Cash fork. This led to the presence of _three_ tokens on the exchange: BCH, BCHABC nad BCHSV, with the latter two being 90% cheaper than BCH. Forks just keep spawning when you don't have a formal process to resolve disputes.
 * It appears some forces are tearing apart Bitcoin Cash. Whatever they are, let us keep Decred resistant to them.
+* contrast with how Decred works
 }
 
 
@@ -247,6 +256,8 @@ Alternative way do resolve disputes: attack wrong chains
 
 * https://www.ccn.com/war-bitcoin-cash-startup-launches-mining-pool-to-attack-altcoins-bch-forks/
 }
+
+UK government canceled a stablecoin project based on a fork of btcd. [@alexbosworth] [noted](https://twitter.com/alexbosworth/status/1056318062176145414): "The thing about stablecoins is that one day someone can come along and cancel the whole thing.".
 
 {DEX
 DEX: IDEX [decided](https://medium.com/aurora-dao/pragmatic-decentralization-how-idex-will-approach-industry-regulations-8b109212128a) to implement IP blocking and KYC, SEC [charged](https://www.sec.gov/news/press-release/2018-258) EtherDelta founder with operating an unregistered exchange.
