notes on BCH hash war

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -246,10 +246,14 @@ Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blos
 * nice overview https://medium.com/circle-research/bitcoin-cash-hard-fork-report-4e4377d514a
   * both projects get individually weaker
   * SV is quite aggressive to ABC and hopes to dedicate some hashrate to mining empty blocks on the ABC chain (and not to secure the SV chain)
+* nice high-level overview: https://bitcoinmagazine.com/articles/when-fork-forks-what-you-need-know-bitcoin-cash-goes-war/
+* https://cash.coin.dance/ nice site for following the "hash war"
+* Live stream which ran for 8 hours with appearances from Vitalik, Emin Gun Sirer, others: https://www.youtube.com/watch?v=SxeeQ_-QVNo
+* Nice thread with resources https://www.reddit.com/r/btc/comments/9xasgg/bitcoin_cash_hard_fork_mega_thread/
 * Poloniex [allowed](https://poloniex.freshdesk.com/support/solutions/articles/1000270700-update-on-the-upcoming-bitcoin-cash-hard-fork) users to trade betwen both possible outcomes of the Bitcoin Cash fork. This led to the presence of _three_ tokens on the exchange: BCH, BCHABC nad BCHSV, with the latter two being 90% cheaper than BCH. Forks just keep spawning when you don't have a formal process to resolve disputes.
 * It appears some forces are tearing apart Bitcoin Cash. Whatever they are, let us keep Decred resistant to them.
 * contrast with how Decred works
-}
+  }
 
 
 Alternative way do resolve disputes: attack wrong chains
