--- a/journal/201811.md
+++ b/journal/201811.md
@@ -10,6 +10,7 @@
 
 [dcrd](https://github.com/decred/dcrd):
 
+* Reversed UTXO set semantics is merged https://github.com/decred/dcrd/pull/1471
 * Database migration for the UTXO set semantics reversal https://github.com/decred/dcrd/pull/1520 (big change, more testing is  welcome {remove if merged}). A nice side effect if this change is that full block tests run 40% faster.
 
 [dcrwallet](https://github.com/decred/dcrwallet):
@@ -22,10 +23,13 @@
 * Updated to Electron 3 https://github.com/decred/decrediton/pull/1777
 * Added display of Treasury balance https://github.com/decred/decrediton/pull/1764
 * Improved startup performance for large wallets https://github.com/decred/decrediton/pull/1727
+* ticketbuyer v2 https://github.com/decred/decrediton/pull/1744
 
 [Politeia](https://github.com/decred/politeia):
 
 * politeiavoter privacy improvements
+* feature: highlight new comments {wait for merge or move to Dec} https://github.com/decred/politeiagui/pull/897
+* comment score calculation moved to politeiawww https://github.com/decred/politeia/pull/610
 
 A lot of the big enhancements over the next couple of months are focused on improving performance.
 
@@ -48,6 +52,8 @@ Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/fir
 
 * Check if "Graphical Block Display" is complete by month end, tests just launched.
 * Check work on OPRETURN and "Side Chain" forward compatibility.
+* {what is pub/sub event hub #806?}
+* @gozart is refactoring the app into es6 modules #805
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher):
 
@@ -61,6 +67,7 @@ Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/fir
 * Rename stake "mining" to "voting", "stakepool" to "VSP" {link}
 * [Glossary](https://github.com/decred/dcrdocs/pull/675), lots of work, many people shared feedback
 * Terminology: rename dev fund to "Decred Treasury" https://github.com/decred/dcrdocs/pull/690
+* New page Navigating Politeia Data {link}
 
 [decred.org](https://github.com/decred/dcrweb):
 
@@ -73,10 +80,12 @@ Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {
 Warm welcome to new people contributing for the first time:
 
 * [logicminds](https://github.com/decred/dcrd/commits?author=logicminds) (dcrd, _missed in Oct issue_)
-* [itswisdomagain](https://github.com/decred/dcrdata/commits?author=itswisdomagain) (dcrdata)
+* [@itswisdomagain](https://github.com/decred/dcrdata/commits?author=itswisdomagain) (dcrdata)
 * [wallclockbuilder](https://github.com/decred/politeiagui/commits?author=wallclockbuilder) (politeiagui) {CONFIRM}
+* [@sef](https://github.com/decred/dcrwallet/commits?author=sefbkn) {CONFIRM}
 * @30000fps (design) {clarify}
 
+Congratulations to 4 new contributors listed on decred.org https://github.com/decred/dcrweb/pull/444 {names}
 
 {new contractor companies, updates from existing ones}
 
@@ -90,7 +99,7 @@ https://www.reddit.com/r/decred/comments/9ve9ie/decred_intriguing_and_extraordin
 
 Part of November was reported in the previous issue due to late release.
 
-@snr01 provided nice charts. People in #proposals and #research hacked on Politeia data.
+@snr01 provided nice charts. Multiple people started hacking on Politeia data in #proposals and #research.
 
 Low quality proposals cluttering Politeia were disussed in depth and multiple ideas were suggested. @richardred gave a nice overview of this in Politeia Digest #4.
 
@@ -121,7 +130,14 @@ D1 price bump
 
 Exchange integrations:
 
-* {}
+* Bitqist
+  * https://www.reddit.com/r/decred/comments/9y5dru/you_can_now_instantly_exchange_decred_on_bitqist/
+  * https://bitqist.com/exchange/decred
+  * Dutch https://support.bitqist.com/hc/en-us/articles/360003566512-About-Us
+* Kaiserex launched officially launched an OTC desk after doing OTC since 2015
+  * https://twitter.com/kaiserexcom/status/1064494181224206336
+  * https://www.kaiserex.com/kaiserex-otc-desk/
+  * min trade suze 50k eur
 
 {OTC desks}
 
@@ -133,13 +149,22 @@ Exchange integrations:
 
 New merchants:
 
-* {}
+* Flubit
+  * https://flubit.com/
+  * https://twitter.com/monetaryunit/status/1062127668769050626
+  * {verify: look for statement from flubit}
+  * {what is monetaryunit and how is it related? https://blog.flubit.com/pay-crypto-flubit-com/}
+  * https://www.businesswire.com/news/home/20181108005043/en/Crypto-Coins-Drive-Xmas-Strategy-Largest-eShop
 
 {applications of Decred blockchain and related projects: Politeia, atomicswap}
 
 {investment adoption}
 
 ## Outreach
+
+https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4
+
+^ received a ton of feedback in #marketing showing the power and skill of our writers https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1542337694484551cyyyn:matrix.org
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
 
@@ -165,17 +190,21 @@ Upcoming:
 
 Featured articles:
 
+* {1007} Blockchain forks and chain splits: why we should avoid them by @Haon ([medium](https://blog.goodaudience.com/blockchain-forks-and-chain-splits-why-we-should-avoid-them-f54c693a90f1))
 * {1105} https://www.coinbureau.com/interview/marco-peereboom-decred/
 * {1109} https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
+* {1115} https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4
 * {1115} https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e
 
 Articles:
 
 * {1103} https://coiniq.com/decred-review/
+* {1112} https://medium.com/@info_5576/staking-coins-part-3-decred-83d73f29038d
 
 Translations:
 
-* {}
+* @zubairzia0's "Blockchain governance: how Decred iterates upon Bitcoin" ([original](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e)) [in Chinese](https://medium.com/@guang.dcr/%E8%AF%91%E6%96%87-%E5%8C%BA%E5%9D%97%E9%93%BE%E6%B2%BB%E7%90%86-decred%E5%A6%82%E4%BD%95%E8%BF%AD%E4%BB%A3%E6%AF%94%E7%89%B9%E5%B8%81-53f434b26105) by @guang
+* @thedecreddigest's "Decred: Where did it all begin?" [in Spanish](https://medium.com/@decred_es/decred-d%C3%B3nde-comenz%C3%B3-todo-767092c90a3e) by @elian
 
 Videos:
 
@@ -211,6 +240,7 @@ Comm systems news:
 Twitter:
 
 * a poll whether open Politeia voting is a good process, more of the beloved plutocracy thing https://twitter.com/KyleSamani/status/1062382292860059648
+* Decred vs Tezos governance systems https://twitter.com/spencernoon/status/1062482562482868224
 
 Reddit: {interesting threads}
 
@@ -220,11 +250,21 @@ Chats: {interesting convos}
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
-Oct 14-15 BTC drop, most top 100 cryptoassets lost 10-20% together with the BTC dive to 5400 USDT / 5200 USD. This happened just a day before the BCH split.
+Nov 14-15 BTC drop, most top 100 cryptoassets lost 10-20% together with the BTC dive to 5400 USDT / 5200 USD. This happened just a day before the BCH split.
+
+The Media [believes](https://www.bloomberg.com/news/articles/2018-11-16/crypto-winter-comes-early-as-bitcoin-slide-spurs-viability-fears) the BTC dump was sparked by some pump for Bitcoin Cash fork, citing fear, uncertainty and doubt of some guys.
+
+Nov 19-20 bloody day, BTC down to $4300 {right?}, DCR down to $22.
 
 ## Relevant External
 
 {PoW, ASIC resistance, tech}
+
+Nvidia [reported](https://cointelegraph.com/news/nvidia-q3-results-reveal-crypto-hangover-due-to-disappearance-of-miner-sales) a drop in GPU sales for mining. This must have nothing to do with Ethereum, Zcash and others receiving ASICs for their GPU-oriented mining algorithms, but rather "it is really the canary in the coal mine for Bitcoin and other cryptocurrencies" per [the experts](https://www.bloomberg.com/news/articles/2018-11-16/crypto-winter-comes-early-as-bitcoin-slide-spurs-viability-fears). Seriously guys, it is the [collapse](https://www.bloomberg.com/news/articles/2018-11-15/nvidia-gives-weak-forecast-citing-inventory-stock-slumps) of cryptocurrency mining.
+
+Ethereum Foundation is funding [efforts](https://www.coindesk.com/ethereum-foundation-filecoin-back-plan-to-make-proof-of-stake-hardware) to create ASICs that compute [Verifiable Delay Function](https://vdfresearch.org/) (VDF) as a replacement for Proof-of-Work mining for blockchain security. [This article](https://medium.com/@djrtwo/vdfs-are-not-proof-of-work-91ba3bec2bf4) compares VDF and Proof-of-Work.
+
+Zcash [approved](https://github.com/ZcashFoundation/GrantProposals-2018Q2/issues/15#issuecomment-436106276) funding of ProgPoW prototype for Zcash. This ASIC-resistant, GPU-friendly algorithm that was also [proposed](https://proposals.decred.org/proposals/0aaab331075d08cb03333d5a1bef04b99a708dcbfebc8f8c94040ceb1676e684) in Politeia recently.
 
 {BCH Rust impl https://news.bitcoin.com/bitcoin-cash-community-introduced-to-new-bch-library-written-in-rust/}
 
@@ -253,12 +293,17 @@ Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blos
 * Poloniex [allowed](https://poloniex.freshdesk.com/support/solutions/articles/1000270700-update-on-the-upcoming-bitcoin-cash-hard-fork) users to trade betwen both possible outcomes of the Bitcoin Cash fork. This led to the presence of _three_ tokens on the exchange: BCH, BCHABC nad BCHSV, with the latter two being 90% cheaper than BCH. Forks just keep spawning when you don't have a formal process to resolve disputes.
 * It appears some forces are tearing apart Bitcoin Cash. Whatever they are, let us keep Decred resistant to them.
 * contrast with how Decred works
-  }
-
+* https://medium.com/@carsten71071/what-are-my-options-as-a-bch-holder-before-the-upcoming-bch-hash-war-f74138b96065
+* both mining at a loss  https://cointelegraph.com/news/bitmex-analysts-both-camps-in-bch-hash-war-are-mining-at-major-loss
+}
 
 Alternative way do resolve disputes: attack wrong chains
 
 * https://www.ccn.com/war-bitcoin-cash-startup-launches-mining-pool-to-attack-altcoins-bch-forks/
+
+RChain community's is going through [internal conflicts](https://joshyorndorff.com/blog/keeping-the-rchain-community-together). {what is the source of controversy?} This is not the first internal conflict for RChain, since it itself was born out of a disagreement inside Synereo project which has led to a split in the past.
+
+Looking at many fighting in other communities I (@bee) can't help but insert a personal comment. It appears to me that communities waste a ton of energy on all the controversies. This energy is not building value. Chain splits and community splits leave both sides with less people, less talent, and less chances to make any long term impact. It is ironic that in a space of programmed decentralized consensus systems so many people fail to come to human consensus. Decred manages to keep moving at its decent speed because it avoids external, and more importantly, internal conflicts. Let us keep incentives aligned and keep the community together. {ok or move to own blog?}
 }
 
 UK government canceled a stablecoin project based on a fork of btcd. [@alexbosworth] [noted](https://twitter.com/alexbosworth/status/1056318062176145414): "The thing about stablecoins is that one day someone can come along and cancel the whole thing.".
