Draft of Main News introduction added

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -2,7 +2,11 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-{main news of the month}
+November was an exciting and productive month for the Decred Project.  The community began to reap the benefits of Politeia development with successful live proposal voting. Stakeholders collectively voiced key steering decisions regarding the future of contractor management, public relations, and research all from the comfort of their Decred wallet of choice (Decrcediton or dcrcli).
+
+Decred project organically prepared to scale to support stakeholder vision in November - additional companies, individuals and firms joined the Decred ecosystem while some long term contributors self-organized according to interests and abilities.
+
+Amidst the excitement, growth and change in the community, the development continued in earnest as both desktop and mobile wallet release candidates show promise of continuing a tradition of stability and innovation.
 
 ## Development
 
