Add TODOs to intro, fix double space

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -2,11 +2,11 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-November was an exciting and productive month for the Decred Project.  The community began to reap the benefits of Politeia development with successful live proposal voting. Stakeholders collectively voiced key steering decisions regarding the future of contractor management, public relations, and research all from the comfort of their Decred wallet of choice (Decrcediton or dcrcli).
+November was an exciting and productive month for the Decred Project. The community began to reap the benefits of Politeia development with successful live proposal voting. Stakeholders collectively voiced key steering decisions regarding the future of contractor management, public relations, and research all from the comfort of their Decred wallet of choice (Decrediton or dcrcli {dcrcli?} {mention politeiavoter?}).
 
-Decred project organically prepared to scale to support stakeholder vision in November - additional companies, individuals and firms joined the Decred ecosystem while some long term contributors self-organized according to interests and abilities.
+Decred project organically prepared to scale to support stakeholder vision in November - additional companies {any new companies?}, individuals and firms {are firms and companies different?} joined the Decred ecosystem while some long term contributors self-organized according to interests and abilities.
 
-Amidst the excitement, growth and change in the community, the development continued in earnest as both desktop and mobile wallet release candidates show promise of continuing a tradition of stability and innovation.
+Amidst the excitement, growth and change in the community, the development continued in earnest as both desktop and mobile wallet release candidates {were any RCs released or announced?} show promise of continuing a tradition of stability and innovation.
 
 ## Development
 
@@ -15,7 +15,7 @@ Amidst the excitement, growth and change in the community, the development conti
 [dcrd](https://github.com/decred/dcrd):
 
 * Reversed UTXO set semantics is merged https://github.com/decred/dcrd/pull/1471
-* Database migration for the UTXO set semantics reversal https://github.com/decred/dcrd/pull/1520 (big change, more testing is  welcome {remove if merged}). A nice side effect if this change is that full block tests run 40% faster.
+* Database migration for the UTXO set semantics reversal https://github.com/decred/dcrd/pull/1520 (big change, more testing is welcome {remove if merged}). A nice side effect if this change is that full block tests run 40% faster.
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
@@ -298,7 +298,7 @@ Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blos
 * It appears some forces are tearing apart Bitcoin Cash. Whatever they are, let us keep Decred resistant to them.
 * contrast with how Decred works
 * https://medium.com/@carsten71071/what-are-my-options-as-a-bch-holder-before-the-upcoming-bch-hash-war-f74138b96065
-* both mining at a loss  https://cointelegraph.com/news/bitmex-analysts-both-camps-in-bch-hash-war-are-mining-at-major-loss
+* both mining at a loss https://cointelegraph.com/news/bitmex-analysts-both-camps-in-bch-hash-war-are-mining-at-major-loss
 }
 
 Alternative way do resolve disputes: attack wrong chains
