--- a/journal/201811.md
+++ b/journal/201811.md
@@ -68,6 +68,7 @@ Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/fir
 * {what is pub/sub event hub #806?}
 * @gozart is refactoring the app into es6 modules #805
 * large refactoring by @gozart: css to scss and more https://github.com/decred/dcrdata/pull/839
+* For consistency with the Insight links, you can now access mainnet dcrdata at https://mainnet.dcrdata.org/
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
@@ -117,7 +118,8 @@ Congratulations to 4 new contributors listed on decred.org https://github.com/de
 {new contractor companies, updates from existing ones}
 
 {interviews
-https://www.reddit.com/r/decred/comments/9ve9ie/decred_intriguing_and_extraordinary_an_interview/
+* https://www.reddit.com/r/decred/comments/9ve9ie/decred_intriguing_and_extraordinary_an_interview/
+* https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4
 }
 
 ## Governance
@@ -154,6 +156,10 @@ D1 hashrate and price bump:
 Bitmain announced [Antminer DR5](https://shop.bitmain.com.cn/product/detail?pid=0002018111918225889369SR3N9s0646) with 34 TH/s at 1800 W, price CNY 19,000 (USD 2750), shipping late December.
 
 ## Integrations
+
+Update from Luxor pool:
+
+> Hey Decred pow miners, we made an improvement to the Luxor mining pool over the weekend and most miners should see a hashrate boost of 3-5%.  Hope it helps in these terrible market conditions! (@NickH in [#pow-mining](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154325337225556ClvOt:decred.org))
 
 {new items of infrastructure or news from existing ones}
 
@@ -221,10 +227,12 @@ Featured articles:
 
 * {1007} Blockchain forks and chain splits: why we should avoid them by @Haon ([medium](https://blog.goodaudience.com/blockchain-forks-and-chain-splits-why-we-should-avoid-them-f54c693a90f1))
 * {1105} https://www.coinbureau.com/interview/marco-peereboom-decred/
+* {1108} https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4
 * {1109} https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
 * {1115} https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4
 * {1115} https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e
 * {1117} https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3
+* {1126} https://medium.com/@richardred/hash-war-theater-67d3fcac3e97
 
 Articles:
 
@@ -236,10 +244,10 @@ There were more articles on various websites, but we only list a selected few. T
 
 Translations:
 
-* @zubairzia0's "Blockchain governance: how Decred iterates upon Bitcoin" ([original](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e)) [in Chinese](https://medium.com/@guang.dcr/%E8%AF%91%E6%96%87-%E5%8C%BA%E5%9D%97%E9%93%BE%E6%B2%BB%E7%90%86-decred%E5%A6%82%E4%BD%95%E8%BF%AD%E4%BB%A3%E6%AF%94%E7%89%B9%E5%B8%81-53f434b26105) by @guang
-* @thedecreddigest's "Decred: Where did it all begin?" [in Spanish](https://medium.com/@decred_es/decred-d%C3%B3nde-comenz%C3%B3-todo-767092c90a3e) by @elian
-* https://medium.com/@decred_es/c%C3%B3mo-ser-contratista-en-decred-d0f05386f799
-* https://medium.com/decred-russia/decred-journal-%D0%BE%D0%BA%D1%82%D1%8F%D0%B1%D1%80%D1%8C-2018-1eeffc65344c by @DZ
+* @zubairzia0's [Blockchain governance: how Decred iterates upon Bitcoin](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e) [in Chinese](https://medium.com/@guang.dcr/%E8%AF%91%E6%96%87-%E5%8C%BA%E5%9D%97%E9%93%BE%E6%B2%BB%E7%90%86-decred%E5%A6%82%E4%BD%95%E8%BF%AD%E4%BB%A3%E6%AF%94%E7%89%B9%E5%B8%81-53f434b26105) by @guang
+* @thedecreddigest's [Decred: Where did it all begin?](https://thedecreddigest.com/2017/06/10/decred-where-did-it-all-begin/) [in Spanish](https://medium.com/@decred_es/decred-d%C3%B3nde-comenz%C3%B3-todo-aaa49fed0091) by @elian
+* @jy-p's [Decred Recruiting](https://blog.decred.org/2017/07/25/Decred-Recruiting/) [in Spanish](https://medium.com/@decred_es/c%C3%B3mo-ser-contratista-en-decred-d0f05386f799) by @elian
+* Decred Journal - October 2018 [in Russian](https://medium.com/decred-russia/decred-journal-%D0%BE%D0%BA%D1%82%D1%8F%D0%B1%D1%80%D1%8C-2018-1eeffc65344c) by @DZ
 
 Videos:
 
@@ -269,6 +277,7 @@ Comm systems news:
 
 * New #research room
 * Bridge interruptions led to some messages not delivered from Slack to Matrix
+* A new subreddit was started to overcome the limitations of r/decred, discussion [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154302771624142JbZDI:decred.org). _(bee: yes I'm trolling)_
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
@@ -311,7 +320,7 @@ Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blos
 
 {governance, forks
 
-{BCH forks
+{richardred BCH forks
 * Bitcoin Cash, born as a solution to disagreement with Bitcoin, is splitting into 2 chains (correct?). SV = Satoshi's Vision? Again?
 * (does the community split or is it a horror story by the media?)
 * explain 1) why they are forking, 2) vision and tech behind SV and ABC, 3) people, companies and capital behind both
@@ -330,15 +339,21 @@ Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blos
 * contrast with how Decred works
 * https://medium.com/@carsten71071/what-are-my-options-as-a-bch-holder-before-the-upcoming-bch-hash-war-f74138b96065
 * both mining at a loss https://cointelegraph.com/news/bitmex-analysts-both-camps-in-bch-hash-war-are-mining-at-major-loss
+* https://medium.com/@richardred/hash-war-theater-67d3fcac3e97
+* note how coin holders are yet again not asked for what they want, while miners, developers and exchanges, and even miners from other SHA-256 chains (Bitcoin) could influence the outcome.
+* both chains are losing hashrate since the splithttps://cash.coin.dance/blocks/hashrate
 }
 
 Alternative way do resolve disputes: attack wrong chains
 
 * https://www.ccn.com/war-bitcoin-cash-startup-launches-mining-pool-to-attack-altcoins-bch-forks/
 
-RChain community's is going through [internal conflicts](https://joshyorndorff.com/blog/keeping-the-rchain-community-together). {what is the source of controversy?} This is not the first internal conflict for RChain, since it itself was born out of a disagreement inside Synereo project which has led to a split in the past.
+RChain community's is going through [internal conflicts](https://joshyorndorff.com/blog/keeping-the-rchain-community-together). {what is the source of controversy?} This is not the first internal conflict for RChain, since it itself was born out of a disagreement inside Synereo project which has led to a split in the past. {#governance link}
 
 Looking at many fighting in other communities I (@bee) can't help but insert a personal comment. It appears to me that communities waste a ton of energy on all the controversies. This energy is not building value. Chain splits and community splits leave both sides with less people, less talent, and less chances to make any long term impact. It is ironic that in a space of programmed decentralized consensus systems so many people fail to come to human consensus. Decred manages to keep moving at its decent speed because it avoids external, and more importantly, internal conflicts. Let us keep incentives aligned and keep the community together. {ok or move to own blog?}
+
+{richardred: Aragon mainnet, Navcoin community fund}
+
 }
 
 UK government canceled a stablecoin project based on a fork of btcd. [@alexbosworth] [noted](https://twitter.com/alexbosworth/status/1056318062176145414): "The thing about stablecoins is that one day someone can come along and cancel the whole thing.".
@@ -360,6 +375,12 @@ https://twitter.com/laurashin/status/1059791476102754305
 > @andy_bromberg and @msantoriESQ discuss why ICOs are down 90% since the winter, why airdrops could be a better than ICOs for seeding usage on networks, whether or not they're legal and which wallets to target.
 
 Regular security reminder: SMS, and relying on mobile operators in general, is bad choice for 2FA. Good to see lawsuits [like this](https://www.coindesk.com/victims-sue-att-t-mobile-over-sim-swap-crypto-hacks/) starting but they won't get your coins back. Speaking even more generally, most smartphones have a [baseband chip](https://en.wikipedia.org/wiki/Baseband_processor) and other proprietary parts that nobody really knows what they are doing or how vulnerable they are. Keep your coins safe.
+
+Copay/Bitpay got hacked, if you used this wallet or its derivative, you may need to move your coins to a new seed. The cause was repository compromise of one of its NPM dependencies. Details here:
+
+* https://twitter.com/somsenruben/status/1067250401873776645
+* https://twitter.com/lopp/status/1067129907501826048
+* Decred software was not affected by this hack.
 }
 
 ## About This Issue
