--- a/journal/201811.md
+++ b/journal/201811.md
@@ -12,16 +12,14 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 {per-project summary, drop items without updates}
 
-[dcrd](https://github.com/decred/dcrd):
+[dcrd](https://github.com/decred/dcrd): dcrd is the fully-validating chain daemon for Decred, or in other words, it is the part of the Decred software that communicates with peers and allows the relay of transactions around the world.  This month developers merged [reversed UTXO set semantics](https://github.com/decred/dcrd/pull/1471), an important change that provides simpler handling by all the Decred nodes around the world resulting improved effeciency (for example full block tests run 40% faster).  A [database migration](https://github.com/decred/dcrd/pull/1520) will be added in the next major release to capitolize on the improvements after extensive testing is completed.
+* Reversed UTXO set semantics is merged https://github.com/decred/dcrd/pull/1471 {included in verbose}
+* Database migration for the UTXO set semantics reversal https://github.com/decred/dcrd/pull/1520 (big change, more testing is welcome {remove if merged}). A nice side effect if this change is that full block tests run 40% faster. {included in verbose}
 
-* Reversed UTXO set semantics is merged https://github.com/decred/dcrd/pull/1471
-* Database migration for the UTXO set semantics reversal https://github.com/decred/dcrd/pull/1520 (big change, more testing is welcome {remove if merged}). A nice side effect if this change is that full block tests run 40% faster.
-
-[dcrwallet](https://github.com/decred/dcrwallet):
-
-* Fixed address watching issues on heavily used wallets https://github.com/decred/dcrwallet/pull/1320
-* Fixed missed and double spent transactions in some cases https://github.com/decred/dcrwallet/pull/1321
-* Improved locked balance calculation https://github.com/decred/dcrwallet/pull/1330
+[dcrwallet](https://github.com/decred/dcrwallet): dcrwallet is the wallet daemon and interacts with RPC, in other words, it handles the interaction between your wallet and the blockchain.  As usage has increased the number of addresses watched by default has become too limited for some and configuration modification was required as a workaround.  This [address watching issue](https://github.com/decred/dcrwallet/pull/1320) was fixed by default this month.  Additional rare use case fixes included potential [missed or double spent transactions](https://github.com/decred/dcrwallet/pull/1321) and [improvement of locked balance calculations](https://github.com/decred/dcrwallet/pull/1330).
+* Fixed address watching issues on heavily used wallets https://github.com/decred/dcrwallet/pull/1320 {included in verbose}
+* Fixed missed and double spent transactions in some cases https://github.com/decred/dcrwallet/pull/1321 {included in verbose}
+* Improved locked balance calculation https://github.com/decred/dcrwallet/pull/1330 {included in verbose}
 
 [Decrediton](https://github.com/decred/decrediton):
 
