added similar verbose format for decrediton

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -21,14 +21,14 @@ Amidst the excitement, growth and change in the community, Decred development co
 * Fixed missed and double spent transactions in some cases https://github.com/decred/dcrwallet/pull/1321 {included in verbose}
 * Improved locked balance calculation https://github.com/decred/dcrwallet/pull/1330 {included in verbose}
 
-[Decrediton](https://github.com/decred/decrediton):
+[Decrediton](https://github.com/decred/decrediton): Decrediton is the GUI that utilizes [Electron](https://github.com/electron/electron) to create a simple and easy experience receiving, storing, voting and sending Decred.  To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777) this month.  [Display of the Decred Treasury balane](https://github.com/decred/decrediton/pull/1777) was added add.  The [Decred Treaury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) holds the funds for use in project development. [General loading optimizations](https://github.com/decred/decrediton/pull/1825) and [optimizations specific to large wallets](https://github.com/decred/decrediton/pull/1727) were completed ensuring continued fast performace as wallets scale in size.  Several ticket buying optimizations were included in the [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744) and will be included in the next release of Decrediton.
 
-* Updated to Electron 3 https://github.com/decred/decrediton/pull/1777
-* Added display of Treasury balance https://github.com/decred/decrediton/pull/1764
-* Improved startup performance for large wallets https://github.com/decred/decrediton/pull/1727
-* ticketbuyer v2 https://github.com/decred/decrediton/pull/1744
-* Design improvements
-* Proposal loading optimizations https://github.com/decred/decrediton/pull/1825
+* Updated to Electron 3 https://github.com/decred/decrediton/pull/1777 {included in verbose}
+* Added display of Treasury balance https://github.com/decred/decrediton/pull/1764 {included in verbose}
+* Improved startup performance for large wallets https://github.com/decred/decrediton/pull/1727 {included in verbose}
+* ticketbuyer v2 https://github.com/decred/decrediton/pull/1744 {included in verbose}
+* Design improvements {need link}
+* Proposal loading optimizations https://github.com/decred/decrediton/pull/1825 {included in verbose}
 
 [Politeia](https://github.com/decred/politeia):
 
