--- a/journal/201811.md
+++ b/journal/201811.md
@@ -18,6 +18,7 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 [Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777) this month. [Display of the Decred Treasury balance](https://github.com/decred/decrediton/pull/1777) was added. The [Decred Treaury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) holds the funds for use in project development. [General loading optimizations](https://github.com/decred/decrediton/pull/1825) and [optimizations specific to large wallets](https://github.com/decred/decrediton/pull/1727) were completed ensuring continued fast performace as wallets scale in size. Several ticket buying optimizations were included in the [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744) and will be included in the next release of Decrediton.
 
+* Notifications for new proposals and votes https://github.com/decred/decrediton/pull/1835
 * Design improvements {need link}
 
 [Politeia](https://github.com/decred/politeia):
@@ -29,6 +30,7 @@ Amidst the excitement, growth and change in the community, Decred development co
 * https://github.com/decred/politeia/pull/613
 * tightening security https://github.com/decred/politeiagui/issues/917 {wait for pr}
 * email notifications for comments https://github.com/decred/politeiagui/pull/919
+* small vuln fixed, thanks @iemlisted for reporting https://github.com/decred/politeia/issues/563
 
 A lot of the big enhancements over the next couple of months are focused on improving performance.
 
@@ -57,6 +59,7 @@ Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/fir
 * @gozart is refactoring the app into es6 modules #805
 * large refactoring by @gozart: css to scss and more https://github.com/decred/dcrdata/pull/839
 * For consistency with the Insight links, you can now access mainnet dcrdata at https://mainnet.dcrdata.org/
+* hashrate and chainwork charts https://github.com/decred/dcrdata/pull/808
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
@@ -80,7 +83,9 @@ design:
 
 [docs](https://github.com/decred/dcrdocs):
 
-* Rename stake "mining" to "voting", "stakepool" to "VSP" {link}
+* Rename stake "mining" to "voting", "stakepool" to "VSP"
+  * https://github.com/decred/dcrdocs/pull/590
+  * https://github.com/decred/dcrdocs/pull/724
 * [Glossary](https://github.com/decred/dcrdocs/pull/675), a huge effort by @s_ben and many people who shared feedback.
 * Terminology: rename dev fund to "Decred Treasury" https://github.com/decred/dcrdocs/pull/690
 * New page Navigating Politeia Data {link}
@@ -120,6 +125,12 @@ Part of November was reported in the previous issue due to late release.
 
 Low quality proposals cluttering Politeia were disussed in depth and multiple ideas were suggested. @richardred gave a nice overview of this in Politeia Digest #4.
 
+{props that finished voting}
+
+{3 new props}
+
+{link to pidigest}
+
 ## Network
 
 Hashrate: {start, end, low, high, variation; pool distribution}
@@ -149,6 +160,12 @@ Update from Luxor pool:
 
 > Hey Decred pow miners, we made an improvement to the Luxor mining pool over the weekend and most miners should see a hashrate boost of 3-5%.  Hope it helps in these terrible market conditions! (@NickH in [#pow-mining](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154325337225556ClvOt:decred.org))
 
+
+New VSPs:
+
+* [decred.staked.us](https://decred.staked.us/) with 5% fee.
+* [dcrpool.dittrex.com](https://dcrpool.dittrex.com) with 1% fee.
+
 {new items of infrastructure or news from existing ones}
 
 Exchange integrations:
@@ -161,6 +178,7 @@ Exchange integrations:
   * https://twitter.com/kaiserexcom/status/1064494181224206336
   * https://www.kaiserex.com/kaiserex-otc-desk/
   * min trade suze 50k eur
+* DragonEx added DCR/BTC trading pair https://twitter.com/Dragonex_io/status/1062613644276428800
 
 {OTC desks}
 
@@ -178,6 +196,7 @@ New merchants:
   * {verify: look for statement from flubit}
   * {what is monetaryunit and how is it related? https://blog.flubit.com/pay-crypto-flubit-com/}
   * https://www.businesswire.com/news/home/20181108005043/en/Crypto-Coins-Drive-Xmas-Strategy-Largest-eShop
+* [Coinstop](https://coinstop.io/), Australian reseller of Trezor, Ledger and KeepKey devices, now [accepts](https://twitter.com/COINSTOPio/status/1067927790320664576) DCR.
 
 {applications of Decred blockchain and related projects: Politeia, atomicswap}
 
@@ -188,6 +207,8 @@ New merchants:
 https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4
 
 ^ received a ton of feedback in #marketing showing the power and skill of our writers https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1542337694484551cyyyn:matrix.org
+
+https://www.reddit.com/r/decred/comments/a1bsv8/what_to_expect_from_the_ditto_partnership/
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
 
