small formatting corrections

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -16,7 +16,7 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 [dcrwallet](https://github.com/decred/dcrwallet): As usage has increased the number of addresses watched by default has become too limited for some and configuration file modification for dcrwallet was required as a workaround. This [address watching issue](https://github.com/decred/dcrwallet/pull/1320) was fixed by default this month. Additional rare use case fixes included potential [missed or double spent transactions](https://github.com/decred/dcrwallet/pull/1321) and [improvement of locked balance calculations](https://github.com/decred/dcrwallet/pull/1330).
 
-[Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777) this month. [Display of the Decred Treasury balance](https://github.com/decred/decrediton/pull/1777) was added. The [Decred Treaury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) holds the funds for use in project development. [General loading optimizations](https://github.com/decred/decrediton/pull/1825) and [optimizations specific to large wallets](https://github.com/decred/decrediton/pull/1727) were completed ensuring continued fast performace as wallets scale in size. Several ticket buying optimizations were included in the [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744) and will be included in the next release of Decrediton.  Voting and proposal integration saw improvements as well including [notifications for new proposals and votes](https://github.com/decred/decrediton/pull/1835). In addition to the function and performance of Decrediton, the UI/UX saw significant tuneups this month including [general design improvements](https://github.com/decred/decrediton/issues/1818), adjustments for readability like [resizing](https://github.com/decred/decrediton/issues/1826) and [icons](https://github.com/decred/decrediton/issues/1811), and improvements to the [navigation and animation](https://github.com/decred/decrediton/issues/1809).
+[Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777) this month. Display of the Decred [Treasury balance](https://github.com/decred/decrediton/pull/1777) was added. The [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) holds the funds for use in project development. General [loading optimizations](https://github.com/decred/decrediton/pull/1825) and optimizations specific to [large wallets](https://github.com/decred/decrediton/pull/1727) were completed ensuring continued fast performace as wallets scale in size. Several ticket buying optimizations were included in the [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744) and will be included in the next release of Decrediton.  Voting and proposal integration saw improvements as well including [notifications for new proposals and votes](https://github.com/decred/decrediton/pull/1835). In addition to the function and performance of Decrediton, the UI/UX saw significant tuneups this month including [general design improvements](https://github.com/decred/decrediton/issues/1818), adjustments for readability like [resizing](https://github.com/decred/decrediton/issues/1826) and [icons](https://github.com/decred/decrediton/issues/1811), and improvements to the [navigation and animation](https://github.com/decred/decrediton/issues/1809).
 
 [Politeia](https://github.com/decred/politeia):
 
