--- a/journal/201811.md
+++ b/journal/201811.md
@@ -31,14 +31,7 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 A lot of the big enhancements over the next couple of months are focused on improving performance.
 
-[Android](https://github.com/decred/dcrandroid):
-
-Development of the Decred Mobile Wallet for Android by Raedah Group took a leap forward this month with an alpha release for early adopters available on the Google Play store: https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet.  The Play Store version includes advanced QR code usage for compatibility with other applications in response to the community needs for payments and trades on the go.  Another community sourced innovation successfully implemented by Raedah Group is the "Hidden Account" feature: https://github.com/decred/dcrandroid/issues/175.  Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total.  Community members buying and selling Decred at local meetups are excited for the added privacy and security this feature offers.  Fund transfer between accounts also got an upgrade this month with simple dropdown selection ensuring balance changes are quick and easy: https://github.com/decred/dcrandroid/issues/119.
-
-* Added QR Code sharing option for compatibility with other apps.
-* Graphics and logos updated to match latest Decred design elements.
-* New feature to transfer funds between accounts in the same wallet via dropdown selection.
-* Hidden account feature with balance deducted from main screen added.
+[Android](https://github.com/decred/dcrandroid): Development of the Decred Mobile Wallet for Android by Raedah Group took a leap forward this month with an alpha release for early adopters available on the Google Play store: https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet.  The Play Store version includes advanced QR code usage for compatibility with other applications in response to the community needs for payments and trades on the go.  Another community sourced innovation successfully implemented by Raedah Group is the "Hidden Account" feature: https://github.com/decred/dcrandroid/issues/175.  Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total.  Community members buying and selling Decred at local meetups are excited for the added privacy and security this feature offers.  Fund transfer between accounts also got an upgrade this month with simple dropdown selection ensuring balance changes are quick and easy: https://github.com/decred/dcrandroid/issues/119.
 
 [iOS](https://github.com/raedahgroup/dcrios):
 
