--- a/journal/201811.md
+++ b/journal/201811.md
@@ -17,19 +17,9 @@ Amidst the excitement, growth and change in the community, Decred development co
 [dcrwallet](https://github.com/decred/dcrwallet): As usage has increased the number of addresses watched by default has become too limited for some and configuration file modification for dcrwallet was required as a workaround. This [address watching issue](https://github.com/decred/dcrwallet/pull/1320) was fixed by default this month. Additional rare use case fixes included potential [missed or double spent transactions](https://github.com/decred/dcrwallet/pull/1321) and [improvement of locked balance calculations](https://github.com/decred/dcrwallet/pull/1330).
 
 [Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777) this month. Display of the Decred [Treasury balance](https://github.com/decred/decrediton/pull/1777) was added. The [Decred Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) holds the funds for use in project development. General [loading optimizations](https://github.com/decred/decrediton/pull/1825) and optimizations specific to [large wallets](https://github.com/decred/decrediton/pull/1727) were completed ensuring continued fast performace as wallets scale in size. Several ticket buying optimizations were included in the [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744) and will be included in the next release of Decrediton.  Voting and proposal integration saw improvements as well including [notifications for new proposals and votes](https://github.com/decred/decrediton/pull/1835). In addition to the function and performance of Decrediton, the UI/UX saw significant tuneups this month including [general design improvements](https://github.com/decred/decrediton/issues/1818), adjustments for readability like [resizing](https://github.com/decred/decrediton/issues/1826) and [icons](https://github.com/decred/decrediton/issues/1811), and improvements to the [navigation and animation](https://github.com/decred/decrediton/issues/1809).
+[Trezor](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3): On a related note, Model T firmware version 2.0.9 was [released](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3) with Decred support. Cheers @matheusd for making it happen! Now our Decrediton developers can work on the integration.
 
-[Politeia](https://github.com/decred/politeia):
-
-* politeiavoter privacy improvements
-* feature: highlight new comments {wait for merge or move to Dec} https://github.com/decred/politeiagui/pull/897
-* comment score calculation moved to politeiawww https://github.com/decred/politeia/pull/610
-* https://github.com/decred/politeiagui/pull/899
-* https://github.com/decred/politeia/pull/613
-* tightening security https://github.com/decred/politeiagui/issues/917 {wait for pr}
-* email notifications for comments https://github.com/decred/politeiagui/pull/919
-* small vuln fixed, thanks @iemlisted for reporting https://github.com/decred/politeia/issues/563
-
-A lot of the big enhancements over the next couple of months are focused on improving performance.
+[Politeia](https://github.com/decred/politeia): While an active month of proposals and voting was taking place on the [Politeia site](https://proposals.decred.org/) the development team was hard at work in the background making refinements, improvements, and adding features.  Refinements included [highlighting new comments](https://github.com/decred/politeiagui/pull/897), improving the [vetted proposal lookup](https://github.com/decred/politeia/pull/613) and general performance and UI updates. The community and development team collaborated to improve security by [patching a vulnerability](https://github.com/decred/politeia/issues/563), applying a [general security improvement](https://github.com/decred/politeiagui/issues/917), and making privacy improvements to [politeiavoter](https://github.com/decred/politeia/tree/master/politeiavoter). By popular demand an [email notification system](https://github.com/decred/politeiagui/pull/919) was created to support awareness about comments and new proposals. Easy verifications were made possible by the [search by ticket](https://github.com/decred/politeiagui/pull/899) feature which will allow voters to verify votes cast with an independent lookup.
 
 [Android](https://github.com/decred/dcrandroid): Development of the Decred Mobile Wallet for Android by Raedah Group took a leap forward this month with an pre-release version available on the [Google Play store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet).  The Play Store version includes updated QR code usage for compatibility with other applications in response to the community needs for payments and trades on the go.  This version also includes a security menu which allows users to [sign messages](https://github.com/decred/dcrandroid/issues/226) proving ownership of addresses. Another community sourced innovation successfully implemented by Raedah Group is the ["Hidden Account" feature](https://github.com/decred/dcrandroid/issues/175).  Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total.  Community members buying and selling Decred at local meetups are excited for the added privacy and security this feature offers.  Fund transfer between accounts also got an upgrade this month with simple [dropdown selection](https://github.com/decred/dcrandroid/issues/119) ensuring balance changes are quick and easy.
 
@@ -39,7 +29,7 @@ A lot of the big enhancements over the next couple of months are focused on impr
 * Top to bottom redesign to match latest design elements.
 * Full transaction details added to match detail level of desktop wallet.
 
-Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3) with Decred support. Cheers @matheusd for making it happen! Now our Decrediton developers can work on the integration.
+
 
 [dcrdata](https://github.com/decred/dcrdata):
 
